@@ -7,5 +7,16 @@
 ###### [jvm相关](https://github.com/lubinsu/case/tree/master/src/main/java/com/maiya/jvm)
 > * [死循环Runnable线程导致的cpu消耗直线上升](https://github.com/lubinsu/case/blob/master/src/main/java/com/maiya/jvm/DumpWhileDemo.java)
 > * [死锁](https://github.com/lubinsu/case/blob/master/src/main/java/com/maiya/jvm/DiedsynchronizedTest.java)
-> * [死锁](https://github.com/lubinsu/case/blob/master/src/main/java/com/maiya/jvm/DiedsynchronizedTest.java)
-> * [死锁](https://github.com/lubinsu/case/blob/master/src/main/java/com/maiya/jvm/DiedsynchronizedTest.java)
+> * [内存溢出](https://github.com/lubinsu/case/blob/master/src/main/java/com/maiya/jvm/GcTest01.java)
+
+执行参数：
+```
+-Xms5m -Xmx20m -XX:+PrintGCDetails -XX:+PrintCommandLineFlags
+```
+
+###### [lambda表达式](https://github.com/lubinsu/case/blob/b10b3f476659c32729fc0d3343f402a4de88a49c/src/test/java/com/maiyabank/AppTest.java#L44)
+###### [多线程](https://github.com/lubinsu/case/tree/master/src/main/java/com/maiya/threads)
+###### [elasticsearch](https://github.com/lubinsu/case/tree/master/src/main/java/com/maiya/util/elasticsearch)
+###### [kafka](https://github.com/lubinsu/case/tree/master/src/main/java/com/maiya/util/kafka)
+###### [nio](https://github.com/lubinsu/case/tree/master/src/main/java/com/maiya/util/nio)
+###### [使用Zookeeper实现的分布式锁](https://github.com/lubinsu/case/tree/master/src/main/java/com/maiya/util/zookeeper)
